--- a/PROJECT_3_InverseSquareLawMotion/实验报告模板.md
+++ b/PROJECT_3_InverseSquareLawMotion/实验报告模板.md
@@ -1,100 +1,113 @@
 # 项目：平方反比引力场中的运动 - 实验报告
 
-**学生姓名：** [在此处填写你的姓名]
-**学号：** [在此处填写你的学号]
-**完成日期：** [在此处填写完成日期]
+**学生姓名：** [Yuan Xuanjun]
+**学号：** [20231050123]
+**完成日期：** [2025/6/4]
 
 ## 1. 实验目的
 
-（请用1-2句话简要描述本次实验你希望达成的学习目标，例如：通过数值模拟研究不同能量和角动量条件下质点在平方反比引力场中的轨道特性，并验证能量守恒和角动量守恒。）
+通过数值模拟研究不同能量和角动量条件下质点在平方反比引力场中的轨道特性，验证能量守恒和角动量守恒定律，并分析轨道形状与能量、角动量的关系。
 
 ## 2. 核心算法与实现
 
 ### 2.1 运动方程与数值方法
-（简要说明你所使用的运动方程（例如，直角坐标系下的二阶微分方程组）以及你选择的数值求解方法，如 `scipy.integrate.solve_ivp` 及其参数设置，或自行实现的算法如龙格-库塔法等。）
-
+使用直角坐标系下的二阶微分方程组描述运动：
+'''
+dx/dt = vx
+dy/dt = vy
+dvx/dt = -GM * x / r³
+dvy/dt = -GM * y / r³
+'''
+其中 r = √(x² + y²)。采用scipy.integrate.solve_ivp进行数值求解，方法为RK45，相对容差rtol=1e-7，绝对容差atol=1e-9。
 ### 2.2 关键函数实现思路
-（选择1-2个你认为最核心的函数，例如 `derivatives` 或 `solve_orbit`，用3-5句话描述其实现思路和关键步骤。）
+ `derivatives` 或 `solve_orbit`
 
-#### `[函数名1]` 实现思路：
-
+#### `[derivatives]` 实现思路：
+从状态向量解包出位置和速度分量
+计算距离r并处理接近零的特殊情况
+计算引力加速度分量
+返回导数向量[vx, vy, ax, ay]
 ```python
-# 在此处粘贴你的核心代码片段 (5-10行)
-# 例如 derivatives 函数的核心计算部分
+def derivatives(t, state_vector, gm_val):
+    x, y, vx, vy = state_vector
+    r = np.sqrt(x**2 + y**2)
+    r_cubed = r**3 if r > 1e-10 else 1e-30
+    ax = -gm_val * x / r_cubed
+    ay = -gm_val * y / r_cubed
+    return [vx, vy, ax, ay]
 ```
 
-#### `[函数名2]` 实现思路：
-
+#### `[solve_orbit]` 实现思路：
+调用solve_ivp函数
+设置积分时间区间和评估点
+传递derivatives函数和GM参数
+返回解对象
 ```python
-# 在此处粘贴你的核心代码片段 (5-10行)
-# 例如 solve_orbit 函数调用 solve_ivp 的部分
+def solve_orbit(initial_conditions, t_span, t_eval, gm_val):
+    return solve_ivp(fun=derivatives, t_span=t_span, y0=initial_conditions,
+                   t_eval=t_eval, args=(gm_val,), method='RK45',
+                   rtol=1e-7, atol=1e-9)
 ```
 
 ## 3. 实验结果与分析
 
 ### 3.1 不同总能量下的轨道
 
-（在此处展示并分析你针对任务 A 生成的轨道图像。确保图像清晰，包含必要的标签和图例。）
 
 **图1：不同能量下的轨道图 (E<0, E=0, E>0)**
-
-```
-[如果无法直接嵌入图像，请在此处描述图像内容，并指明图像文件名，例如：
- 图像显示了三种能量条件下的轨道：
- - 椭圆轨道 (E = [具体值]): [简要描述形状和特征]
- - 抛物线轨道 (E = [具体值]): [简要描述形状和特征]
- - 双曲线轨道 (E = [具体值]): [简要描述形状和特征]
- 中心天体位于原点。
- 图像文件名：energy_orbits.png (示例)
-]
-```
-
+![image](https://github.com/user-attachments/assets/2073ac96-18fb-4fba-9768-f0b2126662b8)
+图像显示三种能量条件下的轨道：
+椭圆轨道 (E = -0.68): 闭合轨道，中心天体位于一个焦点
+抛物线轨道 (E ≈ 0): 开放轨道，逃逸速度刚好为零
+双曲线轨道 (E = 0.44): 开放轨道，逃逸速度为正
 **结果分析：**
-（简要分析不同能量条件下轨道形状的差异及其物理意义。可以讨论能量与轨道是否束缚的关系。）
+E<0时系统处于束缚状态，形成闭合椭圆轨道
+E=0为临界状态，轨道为抛物线
+E>0时系统非束缚，轨道为双曲线
 
-**(可选) 能量与角动量守恒验证：**
-（如果你进行了能量和角动量随时间变化的计算和绘图，请在此处展示结果，并分析其守恒情况。讨论数值误差对守恒性的影响。）
 
 ### 3.2 不同角动量下的椭圆轨道 (E < 0)
 
-（在此处展示并分析你针对任务 B 生成的轨道图像。）
-
 **图2：固定能量 (E=[具体值])，不同角动量下的椭圆轨道**
+![image](https://github.com/user-attachments/assets/d82a9e0e-e1be-4b3f-8de1-6d5ca7d86e0b)
+轨道参数：
+L=0.60: 高偏心率椭圆 (e≈0.8)
+L=0.80: 中等偏心率椭圆 (e≈0.6)
+L=1.00: 近圆形轨道 (e≈0.2)
 
-```
-[如果无法直接嵌入图像，请在此处描述图像内容，并指明图像文件名，例如：
- 图像显示了能量 E=[具体值] 时，三个不同角动量 L1, L2, L3 下的椭圆轨道。
- - L1 = [值]: [描述轨道形状，如偏心率]
- - L2 = [值]: [描述轨道形状]
- - L3 = [值]: [描述轨道形状]
- 图像文件名：angular_momentum_orbits.png (示例)
-]
-```
 
 **结果分析：**
-（分析角动量大小对椭圆轨道形状（如偏心率、半长轴、半短轴）的影响。角动量如何改变轨道的“扁平”程度？）
+角动量增大导致：
+轨道偏心率减小
+近地点距离增大
+轨道更接近圆形
 
 ## 4. 问题与收获
 
 ### 4.1遇到的主要问题及解决方法
-（列出你在完成项目中遇到的1-2个主要困难或挑战，并说明你是如何思考和解决这些问题的。）
 
-**问题1：** [描述问题]
-**解决方法：** [描述你的解决思路和过程]
+**问题1：** 初始条件设置不当导致轨道计算发散
+**解决方法：** 通过能量公式反推合适的初始速度，确保物理合理性
 
-**问题2：** [描述问题]
-**解决方法：** [描述你的解决思路和过程]
+**问题2：** r接近零时的数值不稳定
+**解决方法：** 设置最小r阈值(1e-10)避免除以零错误
 
 ### 4.2 主要收获与体会
-（用3-5句话总结你通过本次实验获得的主要知识、技能或感悟。例如，对轨道力学的理解加深、数值求解ODE的经验、数据可视化的技巧等。）
+深入理解了轨道力学中能量与角动量的关键作用
+掌握了ODE数值求解的实际应用技巧
+学会了通过物理定律验证数值结果的正确性
+提升了科学计算可视化能力
 
 ## 5. (可选) 思考与展望
 
-（如果你完成了可选任务或有其他深入思考，可以在此部分阐述。）
 
 ### 5.1 坐标转换与对称性
-（如果你研究了极坐标转换和轨道对称性，请在此处分享你的发现和理解。）
-
+未考虑相对论效应
+假设中心天体固定不变
+未计入其他摄动力（如辐射压、潮汐力）
 ### 5.2 其他思考
-（例如，此模型有哪些局限性？如何可以进一步扩展或改进这个项目？真实天体运动与此理想模型的差异等。）
+引入自适应步长控制提高计算效率
+扩展为三维空间运动
+加入多体相互作用
+开发交互式轨道参数调节界面
 
