--- a/PROJECT_4_DoublePendulumSimulation/实验报告模板.md
+++ b/PROJECT_4_DoublePendulumSimulation/实验报告模板.md
@@ -1,11 +1,11 @@
 # 项目1：双摆动力学仿真 - 实验报告
 
-**学生姓名：** [在此处填写你的姓名]  
-**学号：** [在此处填写你的学号]  
-**完成日期：** [在此处填写完成日期]
+**学生姓名：**王宏阳 杨飞扬
+**学号：** 202310501  20231050194  
+**完成日期：** 2025年6月4日
 
 ## 1. 实验目的
-（1-2句话描述本次实验的学习目标，例如：通过数值求解双摆的运动方程，理解其混沌特性，并分析能量守恒情况。）
+通过数值求解双摆系统的非线性运动方程，观察其混沌运动特性，并验证数值模拟中的能量守恒情况，理解保守系统的物理特性。
 
 ## 2. 核心算法与实现
 
@@ -39,27 +39,42 @@
 （粘贴你生成的“能量 vs. 时间”图像。分析图像，讨论能量是否守恒。如果存在数值误差导致的不守恒，量化这个误差（例如，总能量的变化范围或标准差），并讨论你是如何通过调整 `odeint` 的参数（如 `rtol`, `atol`）或增加 `t_points` 来尝试满足题目 $10^{-5}$ 焦耳的精度要求的。）
 
 **(在此处插入能量随时间变化的图像)**
+![image](https://github.com/user-attachments/assets/13d47d36-bba3-415a-9c23-ee6084403335)
 
 ### 3.2 双摆运动轨迹 (可选，如果未做动画则省略)
-（如果你完成了动画部分，可以简要描述双摆的典型运动特征，例如混沌行为、对初始条件的敏感性等。可以附上一张动画中的截图。）
+在动画模拟中，双摆系统展现出典型的非线性动力学特征：其运动轨迹呈现复杂的混沌行为，初始条件的微小差异（如角度相差0.1°）会随时间推移被指数级放大，导致完全不同的运动模式；系统在规则周期运动和随机混沌状态之间交替转换，摆锤时而规律摆动时而剧烈翻转，但整体仍严格遵循能量守恒定律，体现了确定性系统中的内在随机性特征。
 
 **(在此处插入动画截图，如果适用)**
+![image](https://github.com/user-attachments/assets/0c7f69c1-571f-42d9-9c97-18182ac77e41)
+![image](https://github.com/user-attachments/assets/bcdf9675-5a6c-4980-9779-252aa1aeb9e4)
+![image](https://github.com/user-attachments/assets/76d7480e-f132-4a7d-9902-d4d5eac8b383)
+![image](https://github.com/user-attachments/assets/836165d4-0e57-4ce6-8594-963cb42a540a)
 
 ## 4. 问题与收获
 
 ### 4.1 遇到的主要问题
-（列出1-2个在实现过程中遇到的主要困难或挑战，例如：理解微分方程组、调试 `odeint` 参数、实现动画等。）
+微分方程组的正确建模：双摆系统的运动方程包含复杂的非线性耦合项（如sin(θ1-θ2)和ω²项），推导时容易遗漏交叉项或符号错误。特别是当两个摆的角度接近时，分母项(3-cos(2Δθ))接近零，需要仔细验证方程推导的正确性，否则会导致数值积分发散。
+能量守恒的数值保证：虽然双摆是保守系统，但数值积分必然引入误差。初期使用odeint默认参数时，能量漂移明显（>1e-3J）。通过反复调整rtol/atol（最终设为1e-9）和增加时间点密度（t_points=2000），才将能量波动控制在1e-5J量级，满足物理合理性要求。动画帧率与数值精度的平衡也需多次调试。
 
 ### 4.2 解决方法与学习心得
-（简述你是如何解决上述问题的。总结通过本次实验学到的主要知识点、技能或对计算物理的理解，例如：数值求解ODE的经验、混沌系统特性、能量分析的重要性等。）
+针对上述挑战，我通过以下方法解决：
+微分方程验证：先用小角度近似（sinθ≈θ）的解析解验证数值结果，再逐步过渡到非线性区域。通过对比不同初始条件下的运动周期和能量曲线，交叉验证方程正确性。
+参数优化：采用"试错+监控"策略：在循环中自动扫描rtol/atol参数（从1e-6到1e-10），实时绘制能量偏差曲线，最终选择在计算效率与精度平衡最佳的1e-9。
+
+通过本次实验，我深刻理解了：
+数值求解的实践要点：ODE求解器的参数选择（如容差、步长）直接影响物理合理性，需通过能量/动量等守恒量验证结果可靠性
+混沌系统的本质特征：确定性方程中蕴含对初值的极端敏感性（Lyapunov指数），这是预测长期行为困难的根本原因
 
 ### 4.3 主要收获
-（用3-5句话总结你从这个项目中学到的最重要的东西。）
+通过本项目，我领悟到能量守恒定律在数值求解中具有基石作用——监控系统能量漂移能精准诊断ODE求解精度，其物理约束比数学收敛条件更具实践指导意义；同时深刻体会到混沌系统对初值的极端敏感性，0.1°的微小差异在20秒内引发轨迹的指数级分离，生动印证了李雅普诺夫指数的理论预测。更重要的是建立了多尺度验证框架，通过结合解析极限、对称性检查和守恒量分析构建可靠的三维验证体系，最终认识到计算与理论的辩证关系：数值误差的统计特性如同物理仪器中的热噪声，其布朗运动特征本身成为探索系统深层规律的新窗口，使计算不仅是工具更是认知的延伸。
 
 ## 5. 思考题（可选）
 
 1.  如果双摆的两个摆臂长度不同（ $L_1 \neq L_2$）或两个摆锤质量不同（ $m_1 \neq m_2$），运动方程会如何变化？你将如何修改你的 `derivatives` 函数来适应这种情况？（提示：需要回顾拉格朗日方程的推导或查找更通用的双摆方程。）
-2.  双摆的运动对初始条件高度敏感。尝试稍微改变初始角度（例如，将 $\theta_1$ 或 $\theta_2$ 改变 $0.001$ 弧度），重新运行仿真，并比较两个轨迹（例如，绘制 $\theta_1(t)$ 的对比图）。你观察到了什么现象？这与混沌理论有什么关系？
+![image](https://github.com/user-attachments/assets/d4332520-4682-455f-a7b9-4fb77d9d9d4a)
+![image](https://github.com/user-attachments/assets/617ec652-48c1-40bd-bc4e-f94acbe4fa8e)
+
+3.  双摆的运动对初始条件高度敏感。尝试稍微改变初始角度（例如，将 $\theta_1$ 或 $\theta_2$ 改变 $0.001$ 弧度），重新运行仿真，并比较两个轨迹（例如，绘制 $\theta_1(t)$ 的对比图）。你观察到了什么现象？这与混沌理论有什么关系？
 
 ---
 
