--- a/PROJECT_3_InverseSquareLawMotion/实验报告模板.md
+++ b/PROJECT_3_InverseSquareLawMotion/实验报告模板.md
@@ -68,12 +68,13 @@ E>0时系统非束缚，轨道为双曲线
 
 ### 3.2 不同角动量下的椭圆轨道 (E < 0)
 
-**图2：固定能量 (E=[具体值])，不同角动量下的椭圆轨道**
-![image](https://github.com/user-attachments/assets/d82a9e0e-e1be-4b3f-8de1-6d5ca7d86e0b)
+**图2：固定能量 (E=-0.50)，不同角动量下的椭圆轨道**
+![image](https://github.com/user-attachments/assets/37485021-18f7-45d4-8b7a-0753eab744c0)
+
 轨道参数：
-L=0.60: 高偏心率椭圆 (e≈0.8)
-L=0.80: 中等偏心率椭圆 (e≈0.6)
-L=1.00: 近圆形轨道 (e≈0.2)
+L=0.50: 高偏心率椭圆 
+L=0.70: 中等偏心率椭圆
+L=0.90: 近圆形轨道 
 
 
 **结果分析：**
