--- a/PROJECT_4_DoublePendulumSimulation/实验报告模板.md
+++ b/PROJECT_4_DoublePendulumSimulation/实验报告模板.md
@@ -1,7 +1,7 @@
 # 项目1：双摆动力学仿真 - 实验报告
 
 **学生姓名：**王宏阳 杨飞扬
-**学号：** 202310501  20231050194  
+**学号：** 20231050108  20231050194  
 **完成日期：** 2025年6月4日
 
 ## 1. 实验目的
@@ -11,32 +11,115 @@
 
 ### 2.1 运动方程的数值解法
 （简述你是如何设置并调用 `scipy.integrate.odeint` 来求解双摆的微分方程组的。提及你定义的 `derivatives` 函数的关键作用。）
-
+使用 scipy.integrate.odeint 求解双摆微分方程组的步骤如下：
+定义状态变量与导数函数
+将双摆的角度和角速度组合为状态向量 y = [θ₁, ω₁, θ₂, ω₂]，通过 derivatives 函数计算状态导数：
+输入：状态向量 y、时间 t（未使用）、物理参数（摆长、质量、重力加速度）。
+输出：一阶导数数组 [dθ₁/dt, dω₁/dt, dθ₂/dt, dω₂/dt]，其中角加速度由双摆非线性运动方程（含角度差、角速度交叉项等）计算，体现耦合性。
+设置初始条件与时间网格
+初始条件：构建状态向量初值 y0 = [θ₁₀, ω₁₀, θ₂₀, ω₂₀]（如均为 90 度静止）。
+时间数组：用 np.linspace 生成均匀时间点 t_arr（如 0 到 100 秒，2000 个点）。
+调用 odeint 求解
+通过以下代码调用积分器：sol_arr = odeint(derivatives, y0, t_arr, args=(L1, L2, m1, m2, g_param), rtol=1e-9, atol=1e-9) 
+derivatives：提供导数计算逻辑；
+args：传递物理参数（等长等质量时 L1=L2, m1=m2）；
+rtol/atol：控制精度，确保能量守恒。
+关键作用：derivatives 函数将双摆的非线性运动方程转化为可计算的导数形式，odeint 通过数值积分求解该方程组，得到状态随时间的演化，从而模拟双摆的混沌运动。
 ### 2.2 能量计算方法
 （说明你是如何根据 $\theta_1, \omega_1, \theta_2, \omega_2$ 计算系统的总动能 $T$ 和总势能 $V$ 的，并给出总能量 $E = T+V$ 的表达式。）
+![image](https://github.com/user-attachments/assets/ac640a62-810b-40af-a212-3e8d2a8fbabf)
 
 ### 2.3 关键代码片段
 ```python
 # 粘贴你认为最核心的1-2个代码片段，例如 derivatives 函数的实现，或者能量计算部分。
-# derivatives_student 函数实现：
-# def derivatives_student(y, t, L1, L2, m1, m2, g):
-#     theta1, omega1, theta2, omega2 = y
-#     # ... (你的实现)
-#     return [dtheta1_dt, domega1_dt, dtheta2_dt, domega2_dt]
+def derivatives(y, t, L1, L2, m1, m2, g_param):
+    """
+    计算双摆系统状态变量的时间导数(运动方程)
+    
+    参数:
+        y (list/np.array): 当前状态向量[theta1, omega1, theta2, omega2]
+                          theta1 - 第一个摆的角度(弧度)
+                          omega1 - 第一个摆的角速度(弧度/秒)
+                          theta2 - 第二个摆的角度(弧度) 
+                          omega2 - 第二个摆的角速度(弧度/秒)
+        t (float): 当前时间(未直接使用)
+        L1 (float): 第一个摆臂长度
+        L2 (float): 第二个摆臂长度
+        m1 (float): 第一个摆锤质量
+        m2 (float): 第二个摆锤质量
+        g_param (float): 重力加速度
+
+    返回:
+        list: 时间导数[dtheta1/dt, domega1/dt, dtheta2/dt, domega2/dt]
+    
+    注意:
+        这里实现的方程针对L1=L2=L和m1=m2=m的简化情况
+        更一般情况需要不同的运动方程
+    """
+    theta1, omega1, theta2, omega2 = y
+
+    # 角速度(一阶导数)
+    dtheta1_dt = omega1
+    dtheta2_dt = omega2
+
+    # 计算角加速度(二阶导数)
+    delta = theta1 - theta2  # 两摆角度差
+    
+    # 公共分母项
+    den = 3 - np.cos(2*delta)
+    
+    # 第一个摆的角加速度方程
+    num1 = (-omega1**2 * np.sin(2*delta) 
+           - 2 * omega2**2 * np.sin(delta) 
+           - (g_param/L1) * (np.sin(theta1 - 2*theta2) + 3*np.sin(theta1)))
+    domega1_dt = num1 / den
+
+    # 第二个摆的角加速度方程
+    num2 = (4 * omega1**2 * np.sin(delta) 
+           + omega2**2 * np.sin(2*delta) 
+           + 2 * (g_param/L1) * (np.sin(2*theta1 - theta2) - np.sin(theta2)))
+    domega2_dt = num2 / den
+    
+    return [dtheta1_dt, domega1_dt, dtheta2_dt, domega2_dt] ... 
 
 # 能量计算部分：
-# def calculate_energy_student(sol_arr, L_param, m_param, g_param):
-#     theta1 = sol_arr[:, 0]
-#     # ... (你的实现)
-#     V = ...
-#     T = ...
-#     return T + V
+def calculate_energy(sol_arr, L_param=L_CONST, m_param=M_CONST, g_param=G_CONST):
+    """
+    计算双摆系统在每个时间点的总能量(动能+势能)
+    
+    参数:
+        sol_arr (np.array): odeint的解数组(形状(n_points, 4))
+        L_param (float): 摆臂长度
+        m_param (float): 摆锤质量
+        g_param (float): 重力加速度
+
+    返回:
+        np.array: 每个时间点的总能量数组
+    """
+    # 从解数组提取角度和角速度
+    theta1 = sol_arr[:, 0]
+    omega1 = sol_arr[:, 1]
+    theta2 = sol_arr[:, 2]
+    omega2 = sol_arr[:, 3]
+
+    # 势能计算(V = -mgL(2cosθ₁ + cosθ₂))
+    V = -m_param * g_param * L_param * (2 * np.cos(theta1) + np.cos(theta2))
+
+    # 动能计算(来自拉格朗日量推导)
+    T = m_param * L_param**2 * (omega1**2 + 0.5 * omega2**2 + omega1 * omega2 * np.cos(theta1 - theta2))
+    
+    return T + V
 ```
 
 ## 3. 实验结果与分析
 
 ### 3.1 能量守恒分析
 （粘贴你生成的“能量 vs. 时间”图像。分析图像，讨论能量是否守恒。如果存在数值误差导致的不守恒，量化这个误差（例如，总能量的变化范围或标准差），并讨论你是如何通过调整 `odeint` 的参数（如 `rtol`, `atol`）或增加 `t_points` 来尝试满足题目 $10^{-5}$ 焦耳的精度要求的。）
+能量守恒性分析
+理论守恒：无阻尼双摆为保守系统，总能量 E=T+V 严格守恒。
+数值误差：因 odeint 算法截断误差，能量存在微小波动，需通过参数调控。
+![image](https://github.com/user-attachments/assets/015a130d-d9a7-4b31-b812-6827c781cb0e)
+通过收紧 rtol/atol（如 10 e−8/10 e−10)，可将能量误差控制在 10 e−5J以内；t_points 不影响精度但提升可视化效果。
 
 **(在此处插入能量随时间变化的图像)**
 ![image](https://github.com/user-attachments/assets/13d47d36-bba3-415a-9c23-ee6084403335)
