--- a/PROJECT_4_DoublePendulumSimulation/实验报告模板.md
+++ b/PROJECT_4_DoublePendulumSimulation/实验报告模板.md
@@ -1,7 +1,7 @@
 # 项目1：双摆动力学仿真 - 实验报告
 
-**学生姓名：**王宏阳 杨飞扬
-**学号：** 20231050108  20231050194  
+**学生姓名：**杨飞扬 王宏阳 
+**学号：** 20231050194  20231050108
 **完成日期：** 2025年6月4日
 
 ## 1. 实验目的
