--- a/PROJECT_4_DoublePendulumSimulation/实验报告模板.md
+++ b/PROJECT_4_DoublePendulumSimulation/实验报告模板.md
@@ -12,19 +12,19 @@
 ### 2.1 运动方程的数值解法
 （简述你是如何设置并调用 `scipy.integrate.odeint` 来求解双摆的微分方程组的。提及你定义的 `derivatives` 函数的关键作用。）
 使用 scipy.integrate.odeint 求解双摆微分方程组的步骤如下：
-定义状态变量与导数函数
-将双摆的角度和角速度组合为状态向量 y = [θ₁, ω₁, θ₂, ω₂]，通过 derivatives 函数计算状态导数：
-输入：状态向量 y、时间 t（未使用）、物理参数（摆长、质量、重力加速度）。
-输出：一阶导数数组 [dθ₁/dt, dω₁/dt, dθ₂/dt, dω₂/dt]，其中角加速度由双摆非线性运动方程（含角度差、角速度交叉项等）计算，体现耦合性。
-设置初始条件与时间网格
-初始条件：构建状态向量初值 y0 = [θ₁₀, ω₁₀, θ₂₀, ω₂₀]（如均为 90 度静止）。
-时间数组：用 np.linspace 生成均匀时间点 t_arr（如 0 到 100 秒，2000 个点）。
-调用 odeint 求解
-通过以下代码调用积分器：sol_arr = odeint(derivatives, y0, t_arr, args=(L1, L2, m1, m2, g_param), rtol=1e-9, atol=1e-9) 
-derivatives：提供导数计算逻辑；
-args：传递物理参数（等长等质量时 L1=L2, m1=m2）；
-rtol/atol：控制精度，确保能量守恒。
-关键作用：derivatives 函数将双摆的非线性运动方程转化为可计算的导数形式，odeint 通过数值积分求解该方程组，得到状态随时间的演化，从而模拟双摆的混沌运动。
+ - 定义状态变量与导数函数
+ - 将双摆的角度和角速度组合为状态向量 y = [θ₁, ω₁, θ₂, ω₂]，通过 derivatives 函数计算状态导数：
+- 输入：状态向量 y、时间 t（未使用）、物理参数（摆长、质量、重力加速度）。
+- 输出：一阶导数数组 [dθ₁/dt, dω₁/dt, dθ₂/dt, dω₂/dt]，其中角加速度由双摆非线性运动方程（含角度差、角速度交叉项等）计算，体现耦合性。
+- 设置初始条件与时间网格
+- 初始条件：构建状态向量初值 y0 = [θ₁₀, ω₁₀, θ₂₀, ω₂₀]（如均为 90 度静止）。
+- 时间数组：用 np.linspace 生成均匀时间点 t_arr（如 0 到 100 秒，2000 个点）。
+- 调用 odeint 求解
+- 通过以下代码调用积分器：sol_arr = odeint(derivatives, y0, t_arr, args=(L1, L2, m1, m2, g_param), rtol=1e-9, atol=1e-9) 
+- derivatives：提供导数计算逻辑；
+- args：传递物理参数（等长等质量时 L1=L2, m1=m2）；
+- rtol/atol：控制精度，确保能量守恒。
+- 关键作用：derivatives 函数将双摆的非线性运动方程转化为可计算的导数形式，odeint 通过数值积分求解该方程组，得到状态随时间的演化，从而模拟双摆的混沌运动。
 ### 2.2 能量计算方法
 （说明你是如何根据 $\theta_1, \omega_1, \theta_2, \omega_2$ 计算系统的总动能 $T$ 和总势能 $V$ 的，并给出总能量 $E = T+V$ 的表达式。）
 ![image](https://github.com/user-attachments/assets/ac640a62-810b-40af-a212-3e8d2a8fbabf)
@@ -115,11 +115,12 @@ def calculate_energy(sol_arr, L_param=L_CONST, m_param=M_CONST, g_param=G_CONST)
 
 ### 3.1 能量守恒分析
 （粘贴你生成的“能量 vs. 时间”图像。分析图像，讨论能量是否守恒。如果存在数值误差导致的不守恒，量化这个误差（例如，总能量的变化范围或标准差），并讨论你是如何通过调整 `odeint` 的参数（如 `rtol`, `atol`）或增加 `t_points` 来尝试满足题目 $10^{-5}$ 焦耳的精度要求的。）
-能量守恒性分析
-理论守恒：无阻尼双摆为保守系统，总能量 E=T+V 严格守恒。
-数值误差：因 odeint 算法截断误差，能量存在微小波动，需通过参数调控。
+- 能量守恒性分析
+- 理论守恒：无阻尼双摆为保守系统，总能量 E=T+V 严格守恒。
+- 数值误差：因 odeint 算法截断误差，能量存在微小波动，需通过参数调控。
+- 通过收紧 rtol/atol（如 10 e−8/10 e−10)，可将能量误差控制在 10 e−5J以内；t_points 不影响精度但提升可视化效果。
 ![image](https://github.com/user-attachments/assets/015a130d-d9a7-4b31-b812-6827c781cb0e)
-通过收紧 rtol/atol（如 10 e−8/10 e−10)，可将能量误差控制在 10 e−5J以内；t_points 不影响精度但提升可视化效果。
+
 
 **(在此处插入能量随时间变化的图像)**
 ![image](https://github.com/user-attachments/assets/13d47d36-bba3-415a-9c23-ee6084403335)
@@ -136,20 +137,22 @@ def calculate_energy(sol_arr, L_param=L_CONST, m_param=M_CONST, g_param=G_CONST)
 ## 4. 问题与收获
 
 ### 4.1 遇到的主要问题
-微分方程组的正确建模：双摆系统的运动方程包含复杂的非线性耦合项（如sin(θ1-θ2)和ω²项），推导时容易遗漏交叉项或符号错误。特别是当两个摆的角度接近时，分母项(3-cos(2Δθ))接近零，需要仔细验证方程推导的正确性，否则会导致数值积分发散。
-能量守恒的数值保证：虽然双摆是保守系统，但数值积分必然引入误差。初期使用odeint默认参数时，能量漂移明显（>1e-3J）。通过反复调整rtol/atol（最终设为1e-9）和增加时间点密度（t_points=2000），才将能量波动控制在1e-5J量级，满足物理合理性要求。动画帧率与数值精度的平衡也需多次调试。
+- 微分方程组的正确建模：双摆系统的运动方程包含复杂的非线性耦合项（如sin(θ1-θ2)和ω²项），推导时容易遗漏交叉项或符号错误。特别是当两个摆的角度接近时，分母项(3-cos(2Δθ))接近零，需要仔细验证方程推导的正确性，否则会导致数值积分发散。
+- 能量守恒的数值保证：虽然双摆是保守系统，但数值积分必然引入误差。初期使用odeint默认参数时，能量漂移明显（>1e-3J）。通过反复调整rtol/atol（最终设为1e-9）和增加时间点密度（t_points=2000），才将能量波动控制在1e-5J量级，满足物理合理性要求。动画帧率与数值精度的平衡也需多次调试。
 
 ### 4.2 解决方法与学习心得
-针对上述挑战，我通过以下方法解决：
-微分方程验证：先用小角度近似（sinθ≈θ）的解析解验证数值结果，再逐步过渡到非线性区域。通过对比不同初始条件下的运动周期和能量曲线，交叉验证方程正确性。
-参数优化：采用"试错+监控"策略：在循环中自动扫描rtol/atol参数（从1e-6到1e-10），实时绘制能量偏差曲线，最终选择在计算效率与精度平衡最佳的1e-9。
+- 针对上述挑战，我通过以下方法解决：
+- 微分方程验证：先用小角度近似（sinθ≈θ）的解析解验证数值结果，再逐步过渡到非线性区域。通过对比不同初始条件下的运动周期和能量曲线，交叉验证方程正确性。
+- 参数优化：采用"试错+监控"策略：在循环中自动扫描rtol/atol参数（从1e-6到1e-10），实时绘制能量偏差曲线，最终选择在计算效率与精度平衡最佳的1e-9。
 
 通过本次实验，我深刻理解了：
-数值求解的实践要点：ODE求解器的参数选择（如容差、步长）直接影响物理合理性，需通过能量/动量等守恒量验证结果可靠性
-混沌系统的本质特征：确定性方程中蕴含对初值的极端敏感性（Lyapunov指数），这是预测长期行为困难的根本原因
+- 数值求解的实践要点：ODE求解器的参数选择（如容差、步长）直接影响物理合理性，需通过能量/动量等守恒量验证结果可靠性
+- 混沌系统的本质特征：确定性方程中蕴含对初值的极端敏感性（Lyapunov指数），这是预测长期行为困难的根本原因
 
 ### 4.3 主要收获
-通过本项目，我领悟到能量守恒定律在数值求解中具有基石作用——监控系统能量漂移能精准诊断ODE求解精度，其物理约束比数学收敛条件更具实践指导意义；同时深刻体会到混沌系统对初值的极端敏感性，0.1°的微小差异在20秒内引发轨迹的指数级分离，生动印证了李雅普诺夫指数的理论预测。更重要的是建立了多尺度验证框架，通过结合解析极限、对称性检查和守恒量分析构建可靠的三维验证体系，最终认识到计算与理论的辩证关系：数值误差的统计特性如同物理仪器中的热噪声，其布朗运动特征本身成为探索系统深层规律的新窗口，使计算不仅是工具更是认知的延伸。
+- 通过本项目，我领悟到能量守恒定律在数值求解中具有基石作用——监控系统能量漂移能精准诊断ODE求解精度，其物理约束比数学收敛条件更具实践指导意义
+- 体会到混沌系统对初值的极端敏感性，0.1°的微小差异在20秒内引发轨迹的指数级分离，生动印证了李雅普诺夫指数的理论预测。
+- 建立了多尺度验证框架，通过结合解析极限、对称性检查和守恒量分析构建可靠的三维验证体系，最终认识到计算与理论的辩证关系：数值误差的统计特性如同物理仪器中的热噪声，其布朗运动特征本身成为探索系统深层规律的新窗口，使计算不仅是工具更是认知的延伸。
 
 ## 5. 思考题（可选）
 
